<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">specimen-ventory</string>
    <string name="new_surgery">New Surgery</string>
    <string name="list_specimen">View Specimen</string>

    <string name="radio_iv_surgery">IV Surgery</string>
    <string name="radio_virus_surgery">Virus Surgery</string>
    <string name="radio_lesion_surgery">Lesion Surgery</string>
    <string name="radio_electrode_surgery">Electrode Surgery</string>
    <string name="radio_optrode_surgery">Optrode Surgery</string>
    <string name="radio_trace_surgery">Trace Surgery</string>
    <string name="radio_cannula_surgery">Cannula Surgery</string>
    <string name="radio_head_surgery">Head Surgery</string>
    <string name="radio_surgery_dialog">Select a Surgery Type:</string>

    <string name="button_cancel">Cancel</string>
    <string name="button_next">Next</string>
    <string name="button_submit">Submit</string>

    <string name="surgery_information_header">Surgery Information</string>
    <string name="surgery_form_date_label">Date: </string>
    <string name="surgery_form_time_start_label">Time Start: </string>
    <string name="surgery_form_time_end_label">Time End: </string>
    <string name="surgery_form_animal_id_label">Animal #: </string>
    <string name="surgery_form_surgeon_label">Surgeon: </string>
    <string name="surgery_form_procedure_label">Procedure: </string>
    <string name="surgery_form_anesthesia_type_label">Anesthesia Type: </string>
    <string name="surgery_form_analgesia_type_label">Analgesia Dose: </string>
    <string name="surgery_form_anesthesia_dose_label">Anesthesia Dose: </string>
    <string name="surgery_form_analgesia_dose_label">Analgesia Dose: </string>
    <string name="surgery_form_notes_label">Notes: </string>
    <string name="surgery_form_date_button">Choose Date</string>

    <string name="anesthesia_isoflurane_usp">Isoflurane, USP</string>
    <string name="anesthesia_ketamine_xylazine">Ketamine/Xylamine (80mg/8/mg/mL)</string>
    <string name="anesthesia_chloral_hydrate">Chloral Hydrate (7%)</string>
    <string name="anesthesia_pentobarbital">Pentobarbital (50mg/mL)</string>

    <string name="analgesia_ketoprofen">Ketoprofen (5mg/mL)</string>

    <string-array name="surgeon_array">
        <item>Tom</item>
        <item>Nathan</item>
        <item>Courtney</item>
        <item>tom</item>
        <item>nathan</item>
        <item>courtney</item>
    </string-array>
</resources>
