<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/generalSurgeryForm"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:stretchColumns="1">
    <TextView android:text="@string/surgery_information_header"
              android:gravity="center"
              android:textSize="20dip"/>
    <!-- Date input-->
    <TableRow android:padding="5dp">
        <TextView android:text="@string/surgery_form_date_label"
                  android:gravity="left"
                  android:paddingRight="10dip"/>
        <EditText android:id="@+id/generalDate"
                  android:inputType="date"
                  android:text="" />
    </TableRow>
    <!--Time start input-->
    <TableRow android:padding="5dp">
        <TextView android:text="@string/surgery_form_time_start_label"
                  android:gravity="left"
                  android:paddingRight="10dip"/>
        <EditText android:id="@+id/generalStartTime"
                  android:inputType="text"
                  android:text=""/>
    </TableRow>
    <!--Time end input-->
    <TableRow android:padding="5dp">
        <TextView android:text="@string/surgery_form_time_end_label"
                  android:gravity="left"
                  android:paddingRight="10dip"/>
        <EditText android:id="@+id/generalEndTime"
                  android:inputType="text"
                  android:text=""/>
    </TableRow>
    <!--Animal Id Input-->
    <TableRow android:padding="5dp">
        <TextView android:text="@string/surgery_form_animal_id_label"
                  android:gravity="left"
                  android:paddingRight="10dip"/>
        <EditText android:id="@+id/generalAnimalId"
                  android:inputType="text"
                  android:text=""/>
    </TableRow>
    <!--Surgeon auto-complete input-->
    <TableRow android:padding="5dp">
        <TextView android:text="@string/surgery_form_surgeon_label"
                  android:gravity="left"
                  android:paddingRight="10dip"/>
        <AutoCompleteTextView android:id="@+id/generalSurgeonName"
                  android:inputType="textAutoComplete"/>
    </TableRow>
    <!--Procedure input-->
    <TableRow android:padding="5dp">
        <TextView android:text="@string/surgery_form_procedure_label"
                  android:gravity="left"
                  android:paddingRight="10dip"/>
        <EditText android:id="@+id/generalProcedureId"
                  android:inputType="text"
                  android:text=""/>
    </TableRow>
</TableLayout>
