<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/relativeMenuLayout"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_gravity="center|top"
             android:layout_marginTop="20dip">
    <TextView
            android:id="@+id/label"
            android:layout_height="40dip"
            android:layout_width="fill_parent"
            android:gravity="center_horizontal"
            android:paddingTop="5dip"
            android:singleLine="true"
            android:text="@string/app_name"
            android:textSize="24dip"
            android:textColor="#ffff">
    </TextView>
    <Button
            android:layout_margin="25dip"
            android:layout_below="@+id/label"
            android:layout_gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:layout_width="110dip"
            android:id="@+id/new_surgery_button"
            android:layout_height="40dip"
            android:clickable="true"
            android:text="@string/new_surgery">
    </Button>
    <Button
            android:layout_below="@+id/new_surgery_button"
            android:layout_gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:layout_width="125dip"
            android:id="@+id/show_inventory_button"
            android:layout_height="40dip"
            android:clickable="true"
            android:text="@string/list_specimen">
    </Button>
</RelativeLayout>

